# dlToPlanning

./: .gitignore  CMakeLists.txt  OWLToPDDL.sh  README.md  benchmarkProblemUpdate.sh  build.gradle.kts  package.xml  settings.gradle.kts
examples/firstDomain/: domain_created.pddl  domain_created_manual.pddl  domain_plain.pddl  example_problem.pddl  sas_plan
examples/security/: README.md  exportedAdditions.txt  security_domain.pddl  security_domain_created.pddl  security_problem.pddl  security_problem_created.pddl  security_with_imports.owl  security_with_imports_alternative.owl
examples/suave/: README.md  exportedAdditions.txt  suave.pddl  suave_created.pddl  suave_domain.pddl  suave_domain_created.pddl  suave_problem.pddl  suave_problem_created.pddl  suave_problem_old.pddl  suave_with_imports.owl
examples/suave_types/: suave_domain.pddl  suave_domain_created.pddl  suave_problem_created.pddl  suave_with_imports_types.owl
examples/testConstants/: domain.pddl  problem.pddl  sas_plan
examples/testFeatures/numbersInSwrl/: domain_sas_created.pddl  problem.pddl  problem_created.pddl
examples/testFeatures/ontologyImports/: exportedAdditions.txt  general.owl  specific.owl  suave_domain.pddl  suave_problem.pddl  suave_problem_created.pddl
examples/testFeatures/otherConstantsInDomain/: suave_domain.pddl  suave_domain_created.pddl  suave_problem_created.pddl  suave_with_imports.owl
examples/testFeatures/problemParsing/: domain_sas.pddl  domain_sas_created.pddl  navigation.owl  problem.pddl  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
owl_to_pddl/: owl_to_pddl.py
(+51 files in other folders)
